# FaceWinUnlock-Tauri

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_EN.md  build.ps1  hashcat_sessions.db
.cargo/: config.toml
.github/workflows/: release.yml
Server/: .gitignore  Cargo.toml  README.md  exports.def  pipe_sniffer.ps1
Server/src/: CPipeListener.rs  CSampleCredential.rs  CSampleProvider.rs  Pipe.rs  animation.rs  lib.rs
UI/: .gitignore  README.md  index.html  package-lock.json  package.json
UI/resources/: animation_render.html  capture_frames.js  download_models.ps1  face_liveness.onnx  package-lock.json  package.json
UI/src/: App.vue  main.js
UI/src-tauri/: Cargo.toml  build.rs  tauri.conf-包含WebView.json  tauri.conf-所有用户.json  tauri.conf.json
UI/src-tauri/capabilities/: default.json  desktop.json
UI/src-tauri/nsis/: hooks.nsh
UI/src-tauri/src/: lib.rs  main.rs  proc.rs  tray.rs
UI/src-tauri/src/modules/: faces.rs  init.rs  mod.rs  options.rs
UI/src-tauri/src/utils/: api.rs  custom_result.rs  mod.rs  pipe.rs
UI/src/components/: AccountAuthForm.vue  LangSwitcher.vue
UI/src/hook/: useFile.js  useTheme.js  useUnlockLog.js
UI/src/i18n/: index.js
UI/src/i18n/locales/: en.js  zh-CN.js
UI/src/layout/: MainLayout.vue
UI/src/router/: index.js
UI/src/stores/: faces.js  options.js
UI/src/utils/: function.js  mitt.js  sqlite.js
UI/src/views/: Dashboard.vue  Init.vue  Login.vue  Logs.vue  Options.vue
UI/src/views/Faces/: Add.vue  List.vue
Unlock/: .gitignore  Cargo.toml  README.md
Unlock/src/: main.rs
docs/: animation-development.md  code_map.md  tile-positioning.md
