[package]
name = "winlogon"
version = "0.3.5"
edition = "2021"

[lib]
name = "FaceWinUnlock_Tauri"
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
windows-core = "0.59"
log = "0.4"
simplelog = "0.12"
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
