[package]
name = "unlock"
version = "0.4.1"
edition = "2021"

# 产物名称匹配 NSIS 卸载/启动脚本期望的文件名
[[bin]]
name = "FaceWinUnlock-Server"
path = "src/main.rs"

[dependencies]
opencv = { version = "0.92", features = ["dnn", "imgcodecs", "imgproc", "videoio"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Shutdown",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }
windows-core = "0.59"
